# playground

./: .gitignore
alias/: makefile  ut_max_element.cpp
animal/: makefile
animal/src/: animal.cpp  animal.h  bird.cpp  bird.h  dog.cpp  dog.h
animal/test/: ut_animal.h  ut_main.cpp
bulls_and_cows_game/: main.py  player_io.py
cc/: .editorconfig  CMakeLists.txt  README.md  main.cc
expr_tmpl/: Makefile  README.md  main.cpp  vec.hpp
fixture_ctor/: object.hpp  ut_object.cpp
multi_thread/1_thread/: 4_ref.cpp  makefile
multi_thread/3_condition_variable/: 3_wait_predict.cpp
multi_thread/cpp/1_thread/: 2_mem_func.cpp  3_in_array.cpp
multi_thread/cpp/2_mutex/: 1_plain.cpp  2_mutex.cpp  makefile
multi_thread/cpp/3_condition_variable/: 1_notify_one.cpp  (+4 more)
multi_thread/matrix-multiplication/: Main.java  Matrix.java  README.md
multi_thread/mutex/: 3_guard.cpp  README.md
multi_thread/python/: consumer.py  main.py  producer.py
multi_thread/thread/: 1_func.cpp  2_mem_func.cpp  3_in_array.cpp  4_ref.cpp  README.md
mvc_pattern/: data.py  exceptions.py  main.py  requirements.txt  view.py
mvc_pattern/backend/: dataset_backend.py  sqlite_backend.py
mvc_pattern/basic_model/: backend.py  basic_model.py  controller.py  main.py
mvc_pattern/model/: __init__.py  basic_model.py  dataset_model.py  model_interface.py  sqlite_model.py
my_vector/: makefile  my_vector.hpp  ut_my_vector.cpp
socket/: README.md  client.py  main.py  server.py
visitor_with_crtp/: Makefile  README.rst  book.hpp  comic.hpp  main.cpp  novel.hpp  visitable.hpp  visitor.cpp  visitor.hpp
